CLI argument parsing. Relaxed rules on keyword files because no one is consistent with them

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -112,6 +112,7 @@ endif ()
 ###############################################################################
 
 add_executable (odbc
+    "src/cli/Args.cpp"
     "src/cli/main.cpp")
 target_include_directories (odbc
     PUBLIC
