--- a/odb-compiler/keywords/keywords107.ini
+++ b/odb-compiler/keywords/keywords107.ini
@@ -1160,8 +1160,8 @@ SPRITE X=commands\sprite\SPRITE X.htm=(Sprite Number)
 SPRITE Y=commands\sprite\SPRITE Y.htm=(Sprite Number)
 SPRITE=commands\sprite\SPRITE.htm=Sprite Number, XPos, YPos, Image Number
 STRETCH SPRITE=commands\sprite\STRETCH SPRITE.htm=Sprite Number, XScale, YScale
-CALL DLL X=commands\system\CALL DLL X.htm=DLL Number, Function Name, Parameter Pointer, Number Of Params)
-CALL DLL=commands\system\CALL DLL.htm=[DLL Number, Function Name][DLL Number, Function Name, [ Params ]][DLL Number, Function Name)][DLL Number, Function Name, [ Params ])]
+CALL DLL X=commands\system\CALL DLL X.htm=DLL Number, Function Name, Parameter Pointer, Number Of Params
+CALL DLL=commands\system\CALL DLL.htm=[DLL Number, Function Name][DLL Number, Function Name, Params]
 CHECKLIST FVALUE A=commands\system\CHECKLIST FVALUE A.htm=(Index)
 CHECKLIST FVALUE B=commands\system\CHECKLIST FVALUE B.htm=(Index)
 CHECKLIST FVALUE C=commands\system\CHECKLIST FVALUE C.htm=(Index)
