symbol to keyword hack works across buffer boundaries

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -97,6 +97,7 @@ if (${ODBC_TESTS})
         "tests/src/test_db_remarks.cpp"
         "tests/src/test_db_sub.cpp"
         "tests/src/test_db_udt.cpp"
+        "tests/src/test_db_symbol_to_keyword_hack.cpp"
         "tests/src/test_keywords.cpp")
     target_link_libraries (odbc_tests
         PRIVATE
