Parser error reporting. Making keyword parser more strict again

--- a/odb-compiler/keywords/keywords107.ini
+++ b/odb-compiler/keywords/keywords107.ini
@@ -486,13 +486,13 @@ AUTOCAM OFF=commands\camera\AUTOCAM OFF.htm=*no parameters*
 AUTOCAM ON=commands\camera\AUTOCAM ON.htm=*no parameters*
 BACKDROP OFF=commands\camera\BACKDROP OFF.htm=[*no parameters*][Camera Number]
 BACKDROP ON=commands\camera\BACKDROP ON.htm=[*no parameters*][Camera Number]
-CAMERA ANGLE X=commands\camera\CAMERA ANGLE X.htm=[*no parameters*][(Camera Number)]
-CAMERA ANGLE Y=commands\camera\CAMERA ANGLE Y.htm=[*no parameters*][(Camera Number)]
-CAMERA ANGLE Z=commands\camera\CAMERA ANGLE Z.htm=[*no parameters*][(Camera Number)]
+CAMERA ANGLE X=commands\camera\CAMERA ANGLE X.htm=[(*no parameters*)][(Camera Number)]
+CAMERA ANGLE Y=commands\camera\CAMERA ANGLE Y.htm=[(*no parameters*)][(Camera Number)]
+CAMERA ANGLE Z=commands\camera\CAMERA ANGLE Z.htm=[(*no parameters*)][(Camera Number)]
 CAMERA EXIST=commands\camera\CAMERA EXIST.htm=(Camera Number)
-CAMERA POSITION X=commands\camera\CAMERA POSITION X.htm=[*no parameters*][(Camera Number)]
-CAMERA POSITION Y=commands\camera\CAMERA POSITION Y.htm=[*no parameters*][(Camera Number)]
-CAMERA POSITION Z=commands\camera\CAMERA POSITION Z.htm=[*no parameters*][(Camera Number)]
+CAMERA POSITION X=commands\camera\CAMERA POSITION X.htm=[(*no parameters*)][(Camera Number)]
+CAMERA POSITION Y=commands\camera\CAMERA POSITION Y.htm=[(*no parameters*)][(Camera Number)]
+CAMERA POSITION Z=commands\camera\CAMERA POSITION Z.htm=[(*no parameters*)][(Camera Number)]
 CLEAR CAMERA VIEW=commands\camera\CLEAR CAMERA VIEW.htm=[Color Value][Camera Number, Color Value]
 COLOR BACKDROP=commands\camera\COLOR BACKDROP.htm=[Color Value][Camera Number, Color Value]
 CONTROL CAMERA USING ARROWKEYS=commands\camera\CONTROL CAMERA USING ARROWKEYS.htm=Camera Number, MoveSpeed, TurnSpeed
@@ -833,15 +833,15 @@ SAVE IMAGE=commands\image\SAVE IMAGE.htm=[Filename, Image Number][Filename, Imag
 SET IMAGE COLORKEY=commands\image\SET IMAGE COLORKEY.htm=Red Value, Green Value, Blue Value
 CHANGE MOUSE=commands\input\CHANGE MOUSE.htm=Cursor Number
 CLEAR ENTRY BUFFER=commands\input\CLEAR ENTRY BUFFER.htm=*no parameters*
-CONTROL DEVICE INDEX=commands\input\CONTROL DEVICE INDEX.htm=*no parameters*
-CONTROL DEVICE NAME$=commands\input\CONTROL DEVICE NAME$.htm=*no parameters*
-CONTROL DEVICE X=commands\input\CONTROL DEVICE X.htm=*no parameters*
-CONTROL DEVICE Y=commands\input\CONTROL DEVICE Y.htm=*no parameters*
-CONTROL DEVICE Z=commands\input\CONTROL DEVICE Z.htm=*no parameters*
-CONTROLKEY=commands\input\CONTROLKEY.htm=*no parameters*
-DOWNKEY=commands\input\DOWNKEY.htm=*no parameters*
-ENTRY$=commands\input\ENTRY$.htm=[*no parameters*][(Auto Backspace Mode)]
-ESCAPEKEY=commands\input\ESCAPEKEY.htm=*no parameters*
+CONTROL DEVICE INDEX=commands\input\CONTROL DEVICE INDEX.htm=(*no parameters*)
+CONTROL DEVICE NAME$=commands\input\CONTROL DEVICE NAME$.htm=(*no parameters*)
+CONTROL DEVICE X=commands\input\CONTROL DEVICE X.htm=(*no parameters*)
+CONTROL DEVICE Y=commands\input\CONTROL DEVICE Y.htm=(*no parameters*)
+CONTROL DEVICE Z=commands\input\CONTROL DEVICE Z.htm=(*no parameters*)
+CONTROLKEY=commands\input\CONTROLKEY.htm=(*no parameters*)
+DOWNKEY=commands\input\DOWNKEY.htm=(*no parameters*)
+ENTRY$=commands\input\ENTRY$.htm=[(*no parameters*)][(Auto Backspace Mode)]
+ESCAPEKEY=commands\input\ESCAPEKEY.htm=(*no parameters*)
 FORCE ANGLE=commands\input\FORCE ANGLE.htm=Magnitude Value, Angle Value, Delay Value
 FORCE AUTO CENTER OFF=commands\input\FORCE AUTO CENTER OFF.htm=*no parameters*
 FORCE AUTO CENTER ON=commands\input\FORCE AUTO CENTER ON.htm=*no parameters*
@@ -998,7 +998,7 @@ WRITE MEMBLOCK DWORD=commands\memblocks\WRITE MEMBLOCK DWORD.htm=Memblock Number
 WRITE MEMBLOCK FLOAT=commands\memblocks\WRITE MEMBLOCK FLOAT.htm=Memblock Number, Position, Float
 WRITE MEMBLOCK WORD=commands\memblocks\WRITE MEMBLOCK WORD.htm=Memblock Number, Position, Word
 CREATE NET GAME=commands\multiplayer\CREATE NET GAME.htm=[Gamename, Playername, Number Of Players][Gamename, Playername, Number Of Players, Flag]
-CREATE NET PLAYER=commands\multiplayer\CREATE NET PLAYER.htm=[Playername][(Playername)]
+CREATE NET PLAYER=commands\multiplayer\CREATE NET PLAYER.htm=(Playername)
 DEFAULT NET GAME=commands\multiplayer\DEFAULT NET GAME.htm=(Gamename, Playername, Number Of Players, Game Type)
 FREE NET GAME=commands\multiplayer\FREE NET GAME.htm=*no parameters*
 FREE NET PLAYER=commands\multiplayer\FREE NET PLAYER.htm=Player Number
