Init log before running unit tests

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -99,12 +99,12 @@ if (${ODBC_TESTS})
         "tests/src/test_db_udt.cpp"
         "tests/src/test_db_symbol_to_keyword_hack.cpp"
         "tests/src/test_kw_index.cpp"
-        "tests/src/test_kw_matcher.cpp")
+        "tests/src/test_kw_matcher.cpp"
+        "tests/src/main.cpp")
     target_link_libraries (odbc_tests
         PRIVATE
             odbclib
             gmock
-            gmock_main
             stdc++fs)
     target_include_directories (odbc_tests
         PRIVATE
