--- a/odb-compiler/templates/config.hpp.in
+++ b/odb-compiler/templates/config.hpp.in
@@ -9,7 +9,7 @@
 #define ODBC_VERSION \
     ((ODBC_VERSION_MAJOR << 16) | (ODBC_VERSION_MINOR << 8) | ODBC_VERSION_PATCH)
 #define ODBC_VERSION_STR \
-    (STRINGIFY(ODBC_VERSION_MAJOR) "." STRINGIFY(ODBC_VERSION_MINOR) "." STRINGIFY(ODBC_VERSION_PATCH))
+    STRINGIFY(ODBC_VERSION_MAJOR) "." STRINGIFY(ODBC_VERSION_MINOR) "." STRINGIFY(ODBC_VERSION_PATCH)
 #define ODBC_${ODBC_LIB_TYPE}
 #cmakedefine ODBC_DOT_EXPORT
 
