--- a/odb-compiler/templates/config.hpp.in
+++ b/odb-compiler/templates/config.hpp.in
@@ -12,6 +12,8 @@
     STRINGIFY(ODBC_VERSION_MAJOR) "." STRINGIFY(ODBC_VERSION_MINOR) "." STRINGIFY(ODBC_VERSION_PATCH)
 #define ODBC_${ODBC_LIB_TYPE}
 #cmakedefine ODBC_DOT_EXPORT
+#cmakedefine ODBC_VERBOSE_BISON
+#cmakedefine ODBC_VERBOSE_FLEX
 
 #if defined(ODBC_SHARED)
 #   if defined(ODBC_BUILDING)
