Fixed bug in keyword matcher where the keyword wouldn't match if it had upper case letters. Added a unit test that currently hangs the lexer.

--- a/odb-compiler/keywords/Multisync.ini
+++ b/odb-compiler/keywords/Multisync.ini
@@ -1,7 +1,7 @@
-NET HOST=main.htm=Player Amount | Player Amount, [IP Address$]
+NET HOST=main.htm=[Player Amount][Player Amount, IP Address$]
 NET CONNECT=main.htm=IP Address$
 NET DISCONNECT=main.htm=*no parameters*
-NET SEND=main.htm=*no parameters* | Player Number, [Lock Flag]
+NET SEND=main.htm=[*no parameters*][Player Number, Lock Flag]
 NET SEND ALL=main.htm=*no parameters*
 NET GET MESSAGE=main.htm=*no parameters*
 NET GET MESSAGE SIZE=main.htm=*no parameters*
@@ -35,5 +35,5 @@ NET GET OPTION=main.htm=Option
 NET FIREWALL ENABLED=main.htm=*no parameters*
 NET FIREWALL APPLICATION ENABLED=main.htm=Application Path
 NET FIREWALL ENABLE APPLICATION=main.htm=Application Path, Application Name
-NET PUT MEMBLOCK=main.htm=Memblock Number, [Number of Bytes]
+NET PUT MEMBLOCK=main.htm=[Memblock number][Memblock Number, Number of Bytes]
 NET GET MEMBLOCK=main.htm=Memblock Number
