--- a/odb-compiler/keywords/odb-keywords.ini
+++ b/odb-compiler/keywords/odb-keywords.ini
@@ -1,2 +1,7 @@
 SAVE BITMAP==[Filename, Bitmap Number][Filename, Bitmap Number, Compression Mode]
-
+SORT ARRAY==Array, Dimension
+FIND FREE OBJECT==()
+FIND FREE VECTOR==()
+FIND FREE IMAGE==()
+FIND FREE SPRITE==()
+IK RESIZE IMAGE==Image Number, Width, Height, Mode
