Fixing shit, breaking other shit

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -120,6 +120,7 @@ if (${ODBC_TESTS})
         "tests/src/test_db_op_precedence.cpp"
         "tests/src/test_db_remarks.cpp"
         "tests/src/test_db_select.cpp"
+        "tests/src/test_db_string_literal.cpp"
         "tests/src/test_db_subroutine.cpp"
         "tests/src/test_db_udt.cpp"
         "tests/src/test_db_variables.cpp"
