Can use keywords as variable names if they have a type annotation

--- a/odb-sdk/keywords/SC_Collision.ini
+++ b/odb-sdk/keywords/SC_Collision.ini
@@ -13,7 +13,7 @@ SC_setOBJECTcollisionON=commands\Collision\sc_setObjectCollisionOn.htm=Object_Nu
 SC_collisionSTATUS=commands\Collision\sc_collisionStatus.htm=( Object_Num )
 SC_allowOBJECTscaling=commands\Collision\sc_allowObjectScaling.htm=Object Num
 
-SC_setMAXcollisions=commands\Collision\sc_setMaxCollisions=maximum
+SC_setMAXcollisions=commands\Collision\sc_setMaxCollisions.htm=maximum
 
 SC_rayCAST=commands\Collision\sc_rayCast.htm=( Object_Num, Oldx, Oldy, Oldz, X, Y, Z, Exclude_Obj )
 SC_rayCastGroup=commands\Collision\sc_rayCastGroup.htm=( Group_Num, Oldx, Oldy, Oldz, X , Y, Z, Exclude_Obj )
