--- a/odb-sdk/keywords/ShaderData.ini
+++ b/odb-sdk/keywords/ShaderData.ini
@@ -1,60 +1,60 @@
-Get Object Effect==
-Save Effect==
-Get Texture Stage In Use==
-Get Effect Texture Count==
-Get External Parameter Columns==
-Get External Parameter Rows==
-Count External Parameters==
-Release Effect Pointer==
-Get External Parameter Name==
-Get External Parameter Type==
-Get External Parameter Semantic==
-Get External Parameter Annotation Count==
-Get Effect Description==
-Get Effect Image==
-Set Matrix4==
-Get Matrix4==
-Get Effect Parameter Float Value==
-Get Effect Parameter Vector Value==
-Debug Compile Effect==
-Get Effect Error String==
-Render==
-Release Error Pointer==
-Find Default Technique==
-Find Light Technique==
-Set Effect Constant Vector Element==
-Make Dynamic Cube Map==
-Delete Dynamic Cube Map==
-Render Dynamic Cube Map==
-Apply Cube Map To Object==
-On Reset Device==
-Apply Cube Map To Object==
-Get Effect Texture Name==
-Make Dynamic Cube Map==
-Get Effect Parameter Count==
-Remove Camera From Image=
-Dynamic Cube Map Exist==
-Get Parameter Annotation String==
-Get Parameter Annotation Float==
-Load Camera Effect==
-Delete Camera Effect==
-Set Camera Effect==
-Remove Camera Effect==
-Sync Camera==
-Set Camera To Surface==
-Camera Effect Exist==
-Get Camera Effect==
-Set Camera Effect Constant Float==
-Set Camera Effect Constant Integer==
-Set Camera Effect Constant Vector==
-Check Data==
-Is Lighting Shader==
-Is Dynamic Texture==
-Get Dynamic Texture Name==
-Is Alpha Mapping Shader==
-Get Texture Type==
-Get Parameter Annotation Exist==
-Get Effect VS Version==
-Get Effect PS Version==
-Get Model Texture Name==
-Reload Display Pointer===
+Get Object Effect==*No Parameters*
+Save Effect==*No Parameters*
+Get Texture Stage In Use==*No Parameters*
+Get Effect Texture Count==*No Parameters*
+Get External Parameter Columns==*No Parameters*
+Get External Parameter Rows==*No Parameters*
+Count External Parameters==*No Parameters*
+Release Effect Pointer==*No Parameters*
+Get External Parameter Name==*No Parameters*
+Get External Parameter Type==*No Parameters*
+Get External Parameter Semantic==*No Parameters*
+Get External Parameter Annotation Count==*No Parameters*
+Get Effect Description==*No Parameters*
+Get Effect Image==*No Parameters*
+Set Matrix4==*No Parameters*
+Get Matrix4==*No Parameters*
+Get Effect Parameter Float Value==*No Parameters*
+Get Effect Parameter Vector Value==*No Parameters*
+Debug Compile Effect==*No Parameters*
+Get Effect Error String==*No Parameters*
+Render==*No Parameters*
+Release Error Pointer==*No Parameters*
+Find Default Technique==*No Parameters*
+Find Light Technique==*No Parameters*
+Set Effect Constant Vector Element==*No Parameters*
+Make Dynamic Cube Map==*No Parameters*
+Delete Dynamic Cube Map==*No Parameters*
+Render Dynamic Cube Map==*No Parameters*
+Apply Cube Map To Object==*No Parameters*
+On Reset Device==*No Parameters*
+Apply Cube Map To Object==*No Parameters*
+Get Effect Texture Name==*No Parameters*
+Make Dynamic Cube Map==*No Parameters*
+Get Effect Parameter Count==*No Parameters*
+Remove Camera From Image==*No Parameters*
+Dynamic Cube Map Exist==*No Parameters*
+Get Parameter Annotation String==*No Parameters*
+Get Parameter Annotation Float==*No Parameters*
+Load Camera Effect==*No Parameters*
+Delete Camera Effect==*No Parameters*
+Set Camera Effect==*No Parameters*
+Remove Camera Effect==*No Parameters*
+Sync Camera==*No Parameters*
+Set Camera To Surface==*No Parameters*
+Camera Effect Exist==*No Parameters*
+Get Camera Effect==*No Parameters*
+Set Camera Effect Constant Float==*No Parameters*
+Set Camera Effect Constant Integer==*No Parameters*
+Set Camera Effect Constant Vector==*No Parameters*
+Check Data==*No Parameters*
+Is Lighting Shader==*No Parameters*
+Is Dynamic Texture==*No Parameters*
+Get Dynamic Texture Name==*No Parameters*
+Is Alpha Mapping Shader==*No Parameters*
+Get Texture Type==*No Parameters*
+Get Parameter Annotation Exist==*No Parameters*
+Get Effect VS Version==*No Parameters*
+Get Effect PS Version==*No Parameters*
+Get Model Texture Name==*No Parameters*
+Reload Display Pointer==*No Parameters*
