--- a/odb-sdk/keywords/odb-keywords.ini
+++ b/odb-sdk/keywords/odb-keywords.ini
@@ -4,4 +4,6 @@ FIND FREE OBJECT==()
 FIND FREE VECTOR==()
 FIND FREE IMAGE==()
 FIND FREE SPRITE==()
+FIND FREE IMAGE==()
+FIND FREE BITMAP==()
 IK RESIZE IMAGE==Image Number, Width, Height, Mode
